Add visualizations folder with all analysis plots
Added visualizations:
- predictions_plot.png (Actual vs Predicted scatter plot)
- error_distribution.png (Percentage error histogram)
- error_vs_actual.png (Error analysis)
- sensitivity_analysis.png (Parameter sensitivity plots)
- sensitivity_ranking.png (Feature importance ranking)
- sensitivity_train_test_comparison.png (Train/test comparison)

Updated .gitignore to track visualizations for documentation

--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,8 @@ data/predictions_*.csv
 data/sensitivity_*.csv
 data/*.txt
 
-# Generated visualizations
-visualizations/*.png
-visualizations/*.jpg
-visualizations/*.pdf
+# Note: We keep visualizations tracked for documentation purposes
+# visualizations/*.png
+# visualizations/*.jpg
+# visualizations/*.pdf
 
