Add model files for Streamlit Cloud deployment
- Added models/ directory with trained model files (.pkl)
- Updated .gitignore to allow model files for deployment
- Fixes 'Model files not found!' error in deployed app

--- a/.gitignore
+++ b/.gitignore
@@ -60,10 +60,10 @@ env/
 # *.csv
 # *.xlsx
 
-# Generated model files
-models/*.pkl
-models/*.h5
-models/*.joblib
+# Generated model files (commented out for deployment)
+# models/*.pkl
+# models/*.h5
+# models/*.joblib
 
 # Generated data files
 data/predictions_*.csv
