Add comprehensive sensitivity analysis report
- Added detailed sensitivity analysis table with impact levels
- Temperature identified as most critical factor (30.70% sensitivity)
- Environmental factors (Temperature + Humidity) = 52.88% of total sensitivity
- Added key findings and engineering implications
- Updated .gitignore to allow sensitivity report
- Added sensitivity visualizations for documentation

--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ env/
 # Generated data files
 data/predictions_*.csv
 data/sensitivity_*.csv
-data/*.txt
+# data/*.txt  # Allow sensitivity report
 
 # Note: We keep visualizations tracked for documentation purposes
 # visualizations/*.png
